--- a/conf/auth.yaml
+++ b/conf/auth.yaml
@@ -49,6 +49,15 @@ session:
   # The default age of a user session in seconds. Default: 181440 (3 weeks)
   sessionAge: "1814400"
 
+# Configuration of the UI Kit
+uiKit:
+  # can be enabled or disabled; default value is "true"
+  enabled: "true"
+  # can configure theme to be either "light" or "dark"; default value is "dark"
+  theme: "light"
+  # URL to redirect to after successfull auth; default value is null
+  # use https://www.{{ cluster.name }}.hasura-app.io/ to redirect to www after login
+  redirectUrl: https://auth.conductible49.hasura-app.io/v1/user/info
 # Configuration related to the email provider
 email:
   # email address of the sender for verification emails
