--- a/conf/domains.yaml
+++ b/conf/domains.yaml
@@ -1,5 +1,9 @@
 # Domain configuration for the gateway
 # Hasura allots a cluster-name.hasura-app.io for every cluster
+breakbarriersla.com:
+ ssl:
+   type: LetsEncrypt
+   conf: {}
 
 {{ cluster.name }}.hasura-app.io:
   ssl:
