--- a/conf/domains.yaml
+++ b/conf/domains.yaml
@@ -1,6 +1,6 @@
 # Domain configuration for the gateway
 # Hasura allots a cluster-name.hasura-app.io for every cluster
-breakbarriersla.com:
+www.breakbarriersla.com:
  ssl:
    type: LetsEncrypt
    conf: {}
