--- a/conf/auth.yaml
+++ b/conf/auth.yaml
@@ -123,10 +123,10 @@ password:
 google:
  # list of the all the client ids generated for your Google app
 clientIds: ["476090074978-bren6jslielit3gvbmr9uhljeig6r02j.apps.googleusercontent.com"]
-clientSecret:
-   secretKeyRef:
-     key: auth.google.client_secret
-     name: hasura-secrets
+# clientSecret:
+#    secretKeyRef:
+#      key: auth.google.client_secret
+#      name: hasura-secrets
 
 # Configuration for facebook provider
 #facebook:
